user-apps/miscellaneous/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        netpol.cilium.io/egress-to-kube-apiserver: "true"
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0
          ports:
            - containerPort: 3000
          volumeMounts:
            # Mount individual config files from ConfigMap into /app/config
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml

            - name: homepage-config
              mountPath: /app/config/custom.css
              subPath: custom.css

            - name: homepage-config
              mountPath: /app/config/custom.js
              subPath: custom.js

            - name: homepage-config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml

            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml

            - name: homepage-config
              mountPath: /app/config/proxmox.yaml
              subPath: proxmox.yaml

            - name: homepage-config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            
            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml

            - name: homepage-config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
              
            # Mount writable logs directory
            - name: tmp
              mountPath: /app/config/logs
          securityContext:
            allowPrivilegeEscalation: false

      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: tmp
          emptyDir:
            sizeLimit: 16Mi
