user-apps/miscellaneous/homepage/cilium-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage-netpol
spec:
  description: >
    Allow homepage pods to:
      Egress to:
        - Home LAN IPs
        - Cloudflared metrics service

  endpointSelector:
    matchLabels:
      app: homepage

  egress:
    - toServices:
      - k8sService:
          serviceName: cloudflared-metrics
          namespace: cloudflared

    - toCIDR:
      - 10.10.20.4/32
      - 10.10.20.5/32
      - 10.10.20.10/32
